# esp32-weather

./: .gitignore  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.esp32s3
components/dns_server/: dns_server.c
components/dns_server/include/: dns_server.h
components/weather_api/: CMakeLists.txt
components/weather_api/include/: weather_api.h
components/weather_api/src/: weather_api.c
main/: CMakeLists.txt  Kconfig.projbuild  esp_http_client_example.c  font8x16.cc  font8x16.h  idf_component.yml  main.cc  oled_display.cc  oled_display.h
main/web_server/include/: web_server.h
main/web_server/src/: fs_handler.c  fs_handler.cc  rest_api.c  rest_api.cc  web_server.c  web_server.cc
web/: .oxfmtrc.json  index.html  oxlint.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  app.css  main.tsx
web/src/components/: Header.tsx  WeatherCard.tsx
web/src/lib/: api.ts  router.ts
web/src/pages/: Dashboard.tsx  Settings.tsx  Status.tsx  WifiConfig.tsx
web/src/types/: index.ts
